# CK3ToEU4

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CK3ToEU4-Installer.iss  CK3ToEU4.sln  CK3toEU4-Installer.iss  CK3toEU4.sln  CK3toEU4a-Installer.iss  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  appveyor.yml  appveyor.yml.bak  build.sh  build_linux.sh  build_linux_foreign.sh  chinese_tributaries.txt  culture_map.txt  province_mappings.txt  religion_map.txt  tag_mappings.txt
CK3toEU4/: CK3ToEU4.cpp  CK3ToEU4.h  CK3toEU4.vcxproj  CK3toEU4.vcxproj.filters  CMakeLists.txt  Copy_Files.bat  Copy_Files.sh  Copy_Files_Debug.bat  DynamicIdeasMapper.h  main.cpp
CK3toEU4/ConverterVersion/: ConverterVersion.cpp  ConverterVersion.h  outConverterVersion.cpp  outConverterVersion.h
CK3toEU4/Data_Files/: FAQ.txt  GeneralFAQ-READ.ME.FIRST.txt  ReadMe.txt  after_converting.txt  configuration-example.txt  configuration_l_english.yml  configuration_l_french.yml  configuration_l_german.yml  configuration_l_italian.yml  configuration_l_latin.yml  configuration_l_russian.yml  fronter-configuration.txt  fronter-options.txt  license.txt  options_l_english.yml  options_l_french.yml  options_l_german.yml  options_l_italian.yml  options_l_latin.yml  options_l_russian.yml
CK3toEU4/Data_Files/configurables/: EastAsia Reboot_province_mappings.txt  african_passes.txt  char_reduce.txt  chinese_tributaries.txt  culture_map.txt  dev_weights.txt  east_asia_reboot_province_mappings.txt  government_map.txt  heritage_map.txt  i_am_hre.txt  no_islam_overrides.txt  province_mappings.txt  reformed_religions_mappings.txt  religion_list.txt  religion_map.txt  ruler_personalities.txt  shatter_empires.txt  tag_mappings.txt  tradition_ideas.txt  uploader-test.txt  vassal_splitoff.txt  version.txt  victoria3_religion_tenets.txt
CK3toEU4/Data_Files/configurables/dynastyflags/: 00_list.txt  101875.tga  12106.tga  12108.tga  20089.tga  24000.tga  576.tga  589.tga  595.tga  597.tga  7340.tga
CK3toEU4/Data_Files/configurables/religions/: current_icons.txt
CK3toEU4/Resources/: rakaly.dll.lib  steam-mod.txt  workshop_description.txt
CK3toEU4/Resources/images/: BalticReleaseBanner.psd  CainiteReleaseBanner.psd  DynamicReleaseBanner.psd  FinnishReleaseBanner.psd  GayomarthianReleaseBanner.psd  JainReleaseBanner.psd  KushiteReleaseBanner.psd  LollardReleaseBanner.psd  thumbnail.psd
CK3toEU4/Resources/mappings.for.mapper/1.0.3/: definition.csv
CK3toEU4/Resources/mappings.for.mapper/1.1.1/: definition.csv
CK3toEU4/Resources/mappings.for.mapper/1.5.1/: definition.csv
CK3toEU4/Resources/mappings.for.mapper/1.5.1-asiaextended-1.4.4/: definition.csv
CK3toEU4/Resources/workshop/: workshop.description.txt
CK3toEU4/Resources/workshop/mod/: ck3toeu4.mod
CK3toEU4/Source/: CK3ToEU4.cpp  CK3ToEU4Converter.cpp  CK3ToEU4Converter.h  main.cpp
CK3toEU4/Source/CK3World/: World.cpp  World.h
CK3toEU4/Source/CK3World/Characters/: Character.cpp  Character.h  CharacterDomain.cpp  CharacterDomain.h  Characters.cpp  Characters.h
CK3toEU4/Source/CK3World/CoatsOfArms/: CoatOfArms.cpp  CoatOfArms.h  CoatsOfArms.cpp  CoatsOfArms.h  Emblem.cpp  Emblem.h  EmblemInstance.cpp  EmblemInstance.h
CK3toEU4/Source/CK3World/Cultures/: Culture.cpp  Culture.h  Cultures.cpp  Cultures.h
CK3toEU4/Source/CK3World/Dynasties/: Dynasties.cpp  Dynasties.h  Dynasty.cpp  Dynasty.h  House.cpp  House.h  Houses.cpp  Houses.h
CK3toEU4/Source/CK3World/Flags/: Flags.cpp  Flags.h
CK3toEU4/Source/CK3World/Geography/: BaronyHolding.cpp  BaronyHolding.h  BaronyHoldings.cpp  BaronyHoldings.h  CountyDetail.cpp  CountyDetail.h  CountyDetails.cpp  CountyDetails.h  ProvinceHolding.cpp  ProvinceHolding.h  ProvinceHoldings.cpp  ProvinceHoldings.h
CK3toEU4/Source/CK3World/Houses/: Dynasties.cpp  Dynasties.h  Dynasty.cpp  Dynasty.h  House.cpp  House.h  Houses.cpp  Houses.h
CK3toEU4/Source/CK3World/Mods/: Mod.cpp  Mod.h  Mods.cpp  Mods.h
CK3toEU4/Source/CK3World/Religions/: Faith.cpp  Faith.h  Faiths.cpp  Faiths.h  Religion.cpp  Religion.h  Religions.cpp  Religions.h
CK3toEU4/Source/CK3World/Titles/: DynamicTemplate.cpp  DynamicTemplate.h  LandedTitles.cpp  LandedTitles.h  Title.cpp  Title.h  Titles.cpp  Titles.h
CK3toEU4/Source/Configuration/: Configuration.cpp  Configuration.h
CK3toEU4/Source/ConverterVersion/: ConverterVersion.cpp
CK3toEU4/Source/EU4World/: EU4World.cpp  EU4World.h
CK3toEU4/Source/EU4World/Country/: Country.cpp  Country.h  CountryDetails.cpp  CountryDetails.h  MonarchNames.cpp  MonarchNames.h
CK3toEU4/Source/EU4World/Diplomacy/: Agreement.cpp  Agreement.h  Diplomacy.cpp  Diplomacy.h
CK3toEU4/Source/EU4World/FlagCrafter/: FlagCrafter.cpp  FlagCrafter.h
CK3toEU4/Source/EU4World/FlagFoundry/: CoatCrafter.cpp  CoatCrafter.h  EmblemCrafter.cpp  FlagCrafter-old.cpp  FlagCrafter-old.h  FlagCrafter.cpp  FlagCrafter.h  FlagFoundry.cpp  FlagFoundry.h  Recolorer.cpp  Recolorer.h  Warehouse.cpp  Warehouse.h
CK3toEU4/Source/EU4World/Ideas/: NationalIdeas.cpp  NationalIdeas.h
CK3toEU4/Source/EU4World/Output/: outAgreement.cpp  outAgreement.h  outCharacter.cpp  outCharacter.h  outConverterVersion.cpp  outConverterVersion.h  outCountry.cpp  outCountry.h  outCultureDefinitions.cpp  outCultureDefinitions.h  outModFile.cpp  outModFile.h  outNationalIdeas.cpp  outProvince.cpp  outProvince.h  outReligion.cpp  outReligion.h  outWorld.cpp
CK3toEU4/Source/EU4World/Province/: EU4Province.cpp  EU4Province.h  ProvinceDetails.cpp  ProvinceDetails.h  ProvinceModifier.cpp  ProvinceModifier.h
CK3toEU4/Source/EU4World/Religion/: GeneratedReligion.cpp  GeneratedReligion.h
CK3toEU4/Source/Helpers/: rakaly.h  rakaly_wrapper.h
CK3toEU4/Source/Mappers/AfricanPassesMapper/: AfricanPassesMapper.cpp
CK3toEU4/Source/Mappers/CK3ReligionScraper/: CK3ReligionScraper.h  CK3ReligionScraping.h
CK3toEU4/Source/Mappers/ConverterVersion/: ConverterVersion.cpp  ConverterVersion.h
CK3toEU4/Source/Mappers/CultureDefinitionsMapper/: CultureDefinitionsMapper.cpp  (+5 more)
CK3toEU4/VersionParser/: VersionParser.cpp  VersionParser.h  outVersion.cpp  outVersion.h
(+2568 files in other folders)
