cmake_minimum_required(VERSION 3.5)
#set(CMAKE_VERBOSE_MAKEFILE on)

project(CK2ToEU4)
#SET(CMAKE_CXX_COMPILER g++-9)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/Source)
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Source)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

add_compile_options("-lstdc++fs")
add_compile_options("-O2")
add_compile_options("-pthread")
add_link_options(-no-pie)

include_directories("../commonItems")
include_directories("../ZipLib")
include_directories("${PROJECT_SOURCE_DIR}")

add_subdirectory(../ZipLib [binary_dir])

set(MAIN_SOURCES ${MAIN_SOURCES} "${PROJECT_SOURCE_DIR}/CK3ToEU4Converter.cpp")
set(MAIN_SOURCES ${MAIN_SOURCES} "${PROJECT_SOURCE_DIR}/main.cpp")
set(CONFIGURATION_SOURCES ${CONFIGURATION_SOURCES} "${PROJECT_SOURCE_DIR}/Configuration/Configuration.cpp")

set(CK3WORLD_SOURCES ${CK3WORLD_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/World.cpp")
set(CK3WORLD_CHARACTERS_SOURCES ${CK3WORLD_CHARACTERS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Characters/Character.cpp")
set(CK3WORLD_CHARACTERS_SOURCES ${CK3WORLD_CHARACTERS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Characters/CharacterDomain.cpp")
set(CK3WORLD_CHARACTERS_SOURCES ${CK3WORLD_CHARACTERS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Characters/Characters.cpp")
set(CK3WORLD_COATSOFARMS_SOURCES ${CK3WORLD_COATSOFARMS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/CoatsOfArms/CoatOfArms.cpp")
set(CK3WORLD_COATSOFARMS_SOURCES ${CK3WORLD_COATSOFARMS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/CoatsOfArms/CoatsOfArms.cpp")
set(CK3WORLD_COATSOFARMS_SOURCES ${CK3WORLD_COATSOFARMS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/CoatsOfArms/Emblem.cpp")
set(CK3WORLD_COATSOFARMS_SOURCES ${CK3WORLD_COATSOFARMS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/CoatsOfArms/EmblemInstance.cpp")
set(CK3WORLD_DYNASTIES_SOURCES ${CK3WORLD_DYNASTIES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Dynasties/Dynasties.cpp")
set(CK3WORLD_DYNASTIES_SOURCES ${CK3WORLD_DYNASTIES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Dynasties/Dynasty.cpp")
set(CK3WORLD_DYNASTIES_SOURCES ${CK3WORLD_DYNASTIES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Dynasties/House.cpp")
set(CK3WORLD_DYNASTIES_SOURCES ${CK3WORLD_DYNASTIES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Dynasties/Houses.cpp")
set(CK3WORLD_GEOGRAPHY_SOURCES ${CK3WORLD_GEOGRAPHY_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Geography/BaronyHoldings.cpp")
set(CK3WORLD_GEOGRAPHY_SOURCES ${CK3WORLD_GEOGRAPHY_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Geography/BaronyHolding.cpp")
set(CK3WORLD_RELIGIONS_SOURCES ${CK3WORLD_RELIGIONS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Religions/Faith.cpp")
set(CK3WORLD_RELIGIONS_SOURCES ${CK3WORLD_RELIGIONS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Religions/Faiths.cpp")
set(CK3WORLD_RELIGIONS_SOURCES ${CK3WORLD_RELIGIONS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Religions/Religion.cpp")
set(CK3WORLD_RELIGIONS_SOURCES ${CK3WORLD_RELIGIONS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Religions/Religions.cpp")
set(CK3WORLD_TITLES_SOURCES ${CK3WORLD_TITLES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Titles/Title.cpp")
set(CK3WORLD_TITLES_SOURCES ${CK3WORLD_TITLES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Titles/Titles.cpp")

set(EU4WORLD_SOURCES ${EU4WORLD_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/EU4World.cpp")

set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outConverterVersion.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outModFile.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outWorld.cpp")

set(MAPPERS_CONVERTER_VERSION_SOURCES ${MAPPERS_CONVERTER_VERSION_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ConverterVersion/ConverterVersion.cpp")

set(COMMON_SOURCES "../commonItems/CommonFunctions.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Color.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Date.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/GameVersion.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/LinuxUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Log.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/OSCommonLayer.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Parser.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/ParserHelpers.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/StringUtils.cpp")

add_executable(CK3toEU4 
	${MAIN_SOURCES}
	${CONFIGURATION_SOURCES}
	${CK3WORLD_SOURCES}
	${CK3WORLD_CHARACTERS_SOURCES}
	${CK3WORLD_COATSOFARMS_SOURCES}
	${CK3WORLD_DYNASTIES_SOURCES}
	${CK3WORLD_GEOGRAPHY_SOURCES}
	${CK3WORLD_RELIGIONS_SOURCES}
	${CK3WORLD_TITLES_SOURCES}
	${EU4WORLD_SOURCES}
	${EU4WORLD_OUTPUT_SOURCES}
	${MAPPERS_CONVERTER_VERSION_SOURCES}
	${COMMON_SOURCES}
)

target_link_libraries(CK3toEU4 LINK_PUBLIC ZIPLIB stdc++fs)

add_custom_command(TARGET CK3toEU4 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND chmod u+x Copy_Files.sh)
add_custom_command(TARGET CK3toEU4 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND ./Copy_Files.sh)
