cmake_minimum_required(VERSION 3.5)

project(CK3toEU4)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/Source)
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Source)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBDIR /usr/local/lib)
set(LD_LIBRARY_PATH ${LD_LIBRARY_PATH} LIBDIR)
set(LD_RUN_PATH ${LD_RUN_PATH} LIBDIR)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -DMAGICKCORE_HDRI_ENABLE=0 -DMAGICKCORE_QUANTUM_DEPTH=8")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath -Wl,LIBDIR")

add_compile_options("-lstdc++fs")
add_compile_options("-O2")
add_compile_options("-pthread")
add_link_options(-no-pie)

include_directories("../commonItems")
include_directories("../ZipLib")
include_directories("/usr/local/include/ImageMagick-7/")
include_directories("${PROJECT_SOURCE_DIR}")
link_directories(${CMAKE_SOURCE_DIR}/Resources /usr/local/lib)
add_subdirectory(../ZipLib [binary_dir])

set(MAIN_SOURCES ${MAIN_SOURCES} "${PROJECT_SOURCE_DIR}/CK3ToEU4Converter.cpp")
set(MAIN_SOURCES ${MAIN_SOURCES} "${PROJECT_SOURCE_DIR}/main.cpp")
set(CONFIGURATION_SOURCES ${CONFIGURATION_SOURCES} "${PROJECT_SOURCE_DIR}/Configuration/Configuration.cpp")

set(CK3WORLD_SOURCES ${CK3WORLD_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/World.cpp")
set(CK3WORLD_CHARACTERS_SOURCES ${CK3WORLD_CHARACTERS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Characters/Character.cpp")
set(CK3WORLD_CHARACTERS_SOURCES ${CK3WORLD_CHARACTERS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Characters/CharacterDomain.cpp")
set(CK3WORLD_CHARACTERS_SOURCES ${CK3WORLD_CHARACTERS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Characters/Characters.cpp")
set(CK3WORLD_COATSOFARMS_SOURCES ${CK3WORLD_COATSOFARMS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/CoatsOfArms/CoatOfArms.cpp")
set(CK3WORLD_COATSOFARMS_SOURCES ${CK3WORLD_COATSOFARMS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/CoatsOfArms/CoatsOfArms.cpp")
set(CK3WORLD_COATSOFARMS_SOURCES ${CK3WORLD_COATSOFARMS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/CoatsOfArms/Emblem.cpp")
set(CK3WORLD_COATSOFARMS_SOURCES ${CK3WORLD_COATSOFARMS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/CoatsOfArms/EmblemInstance.cpp")
set(CK3WORLD_CULTURES_SOURCES ${CK3WORLD_CULTURES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Cultures/Cultures.cpp")
set(CK3WORLD_CULTURES_SOURCES ${CK3WORLD_CULTURES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Cultures/Culture.cpp")
set(CK3WORLD_DYNASTIES_SOURCES ${CK3WORLD_DYNASTIES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Dynasties/Dynasties.cpp")
set(CK3WORLD_DYNASTIES_SOURCES ${CK3WORLD_DYNASTIES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Dynasties/Dynasty.cpp")
set(CK3WORLD_DYNASTIES_SOURCES ${CK3WORLD_DYNASTIES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Dynasties/House.cpp")
set(CK3WORLD_DYNASTIES_SOURCES ${CK3WORLD_DYNASTIES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Dynasties/Houses.cpp")
set(CK3WORLD_FLAGS_SOURCES ${CK3WORLD_FLAGS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Flags/Flags.cpp")
set(CK3WORLD_GEOGRAPHY_SOURCES ${CK3WORLD_GEOGRAPHY_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Geography/ProvinceHoldings.cpp")
set(CK3WORLD_GEOGRAPHY_SOURCES ${CK3WORLD_GEOGRAPHY_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Geography/ProvinceHolding.cpp")
set(CK3WORLD_GEOGRAPHY_SOURCES ${CK3WORLD_GEOGRAPHY_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Geography/CountyDetails.cpp")
set(CK3WORLD_GEOGRAPHY_SOURCES ${CK3WORLD_GEOGRAPHY_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Geography/CountyDetail.cpp")
set(CK3WORLD_MODS_SOURCES ${CK3WORLD_MODS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Mods/Mod.cpp")
set(CK3WORLD_MODS_SOURCES ${CK3WORLD_MODS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Mods/Mods.cpp")
set(CK3WORLD_RELIGIONS_SOURCES ${CK3WORLD_RELIGIONS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Religions/Faith.cpp")
set(CK3WORLD_RELIGIONS_SOURCES ${CK3WORLD_RELIGIONS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Religions/Faiths.cpp")
set(CK3WORLD_RELIGIONS_SOURCES ${CK3WORLD_RELIGIONS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Religions/Religion.cpp")
set(CK3WORLD_RELIGIONS_SOURCES ${CK3WORLD_RELIGIONS_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Religions/Religions.cpp")
set(CK3WORLD_TITLES_SOURCES ${CK3WORLD_TITLES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Titles/LandedTitles.cpp")
set(CK3WORLD_TITLES_SOURCES ${CK3WORLD_TITLES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Titles/Title.cpp")
set(CK3WORLD_TITLES_SOURCES ${CK3WORLD_TITLES_SOURCES} "${PROJECT_SOURCE_DIR}/CK3World/Titles/Titles.cpp")

set(EU4WORLD_SOURCES ${EU4WORLD_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/EU4World.cpp")
set(EU4WORLD_COUNTRY_SOURCES ${EU4WORLD_COUNTRY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Country/Country.cpp")
set(EU4WORLD_COUNTRY_SOURCES ${EU4WORLD_COUNTRY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Country/CountryDetails.cpp")
set(EU4WORLD_COUNTRY_SOURCES ${EU4WORLD_COUNTRY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Country/MonarchNames.cpp")
set(EU4WORLD_DIPLOMACY_SOURCES ${EU4WORLD_DIPLOMACY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Diplomacy/Agreement.cpp")
set(EU4WORLD_DIPLOMACY_SOURCES ${EU4WORLD_DIPLOMACY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Diplomacy/Diplomacy.cpp")
set(EU4WORLD_FLAG_FOUNDRY_SOURCES ${EU4WORLD_FLAG_FOUNDRY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/FlagFoundry/FlagFoundry.cpp")
set(EU4WORLD_FLAG_FOUNDRY_SOURCES ${EU4WORLD_FLAG_FOUNDRY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/FlagFoundry/FlagCrafter.cpp")
set(EU4WORLD_FLAG_FOUNDRY_SOURCES ${EU4WORLD_FLAG_FOUNDRY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/FlagFoundry/Recolorer.cpp")
set(EU4WORLD_FLAG_FOUNDRY_SOURCES ${EU4WORLD_FLAG_FOUNDRY_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/FlagFoundry/Warehouse.cpp")
set(EU4WORLD_PROVINCE_SOURCES ${EU4WORLD_PROVINCE_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Province/EU4Province.cpp")
set(EU4WORLD_PROVINCE_SOURCES ${EU4WORLD_PROVINCE_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Province/ProvinceDetails.cpp")
set(EU4WORLD_PROVINCE_SOURCES ${EU4WORLD_PROVINCE_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Province/ProvinceModifier.cpp")
set(EU4WORLD_RELIGION_SOURCES ${EU4WORLD_RELIGION_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Religion/GeneratedReligion.cpp")

set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outAgreement.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outCharacter.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outCountry.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outConverterVersion.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outModFile.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outProvince.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outReligion.cpp")
set(EU4WORLD_OUTPUT_SOURCES ${EU4WORLD_OUTPUT_SOURCES} "${PROJECT_SOURCE_DIR}/EU4World/Output/outWorld.cpp")

set(MAPPERS_CONVERTER_VERSION_SOURCES ${MAPPERS_CONVERTER_VERSION_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ConverterVersion/ConverterVersion.cpp")
set(MAPPERS_CULTURE_MAPPER_SOURCES ${MAPPERS_CULTURE_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/CultureMapper/CultureMapper.cpp")
set(MAPPERS_CULTURE_MAPPER_SOURCES ${MAPPERS_CULTURE_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/CultureMapper/CultureMappingRule.cpp")
set(MAPPERS_DEV_WEIGHTS_MAPPER_SOURCES ${MAPPERS_DEV_WEIGHTS_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/DevWeightsMapper/DevWeightsMapper.cpp")
set(MAPPERS_GOVERNMENTS_MAPPER_SOURCES ${MAPPERS_GOVERNMENTS_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/GovernmentsMapper/GovernmentsMapper.cpp")
set(MAPPERS_GOVERNMENTS_MAPPER_SOURCES ${MAPPERS_GOVERNMENTS_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/GovernmentsMapper/GovernmentsMapping.cpp")
set(MAPPERS_IAMHRE_SOURCES ${MAPPERS_IAMHRE_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/IAmHreMapper/IAmHreMapper.cpp")
set(MAPPERS_LOCALIZATION_MAPPER_SOURCES ${MAPPERS_LOCALIZATION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/LocalizationMapper/LocalizationMapper.cpp")
set(MAPPERS_NAMED_COLORS_SOURCES ${MAPPERS_NAMED_COLORS_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/NamedColors/NamedColors.cpp")
set(MAPPERS_PRIMARY_TAG_MAPPER_SOURCES ${MAPPERS_PRIMARY_TAG_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/PrimaryTagMapper/PrimaryTagMapper.cpp")
set(MAPPERS_PRIMARY_TAG_MAPPER_SOURCES ${MAPPERS_PRIMARY_TAG_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/PrimaryTagMapper/PrimaryTagCultureGroup.cpp")
set(MAPPERS_PRIMARY_TAG_MAPPER_SOURCES ${MAPPERS_PRIMARY_TAG_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/PrimaryTagMapper/PrimaryTagCulture.cpp")
set(MAPPERS_PROVINCE_MAPPER_SOURCES ${MAPPERS_PROVINCE_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ProvinceMapper/ProvinceMapper.cpp")
set(MAPPERS_PROVINCE_MAPPER_SOURCES ${MAPPERS_PROVINCE_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ProvinceMapper/ProvinceMapping.cpp")
set(MAPPERS_PROVINCE_MAPPER_SOURCES ${MAPPERS_PROVINCE_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ProvinceMapper/ProvinceMappingsVersion.cpp")
set(MAPPERS_REGION_MAPPER_SOURCES ${MAPPERS_REGION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/RegionMapper/Area.cpp")
set(MAPPERS_REGION_MAPPER_SOURCES ${MAPPERS_REGION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/RegionMapper/Region.cpp")
set(MAPPERS_REGION_MAPPER_SOURCES ${MAPPERS_REGION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/RegionMapper/RegionMapper.cpp")
set(MAPPERS_REGION_MAPPER_SOURCES ${MAPPERS_REGION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/RegionMapper/SuperRegion.cpp")
set(MAPPERS_RELIGION_DEFINITION_MAPPER_SOURCES ${MAPPERS_RELIGION_DEFINITION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ReligionDefinitionMapper/ReligionDefinitionMapper.cpp")
set(MAPPERS_RELIGION_DEFINITION_MAPPER_SOURCES ${MAPPERS_RELIGION_DEFINITION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ReligionDefinitionMapper/ReligionDefinitionMapping.cpp")
set(MAPPERS_RELIGION_GROUP_SCRAPER_SOURCES ${MAPPERS_RELIGION_GROUP_SCRAPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ReligionGroupScraper/ReligionGroupScraper.cpp")
set(MAPPERS_RELIGION_GROUP_SCRAPER_SOURCES ${MAPPERS_RELIGION_GROUP_SCRAPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ReligionGroupScraper/ReligionGroupScraping.cpp")
set(MAPPERS_RELIGION_MAPPER_SOURCES ${MAPPERS_RELIGION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ReligionMapper/ReligionMapper.cpp")
set(MAPPERS_RELIGION_MAPPER_SOURCES ${MAPPERS_RELIGION_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ReligionMapper/ReligionMapping.cpp")
set(MAPPERS_RULER_PERSONALITIES_MAPPER_SOURCES ${MAPPERS_RULER_PERSONALITIES_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/RulerPersonalitiesMapper/RulerPersonalitiesMapper.cpp")
set(MAPPERS_RULER_PERSONALITIES_MAPPER_SOURCES ${MAPPERS_RULER_PERSONALITIES_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/RulerPersonalitiesMapper/RulerPersonalitiesMapping.cpp")
set(MAPPERS_SHATTER_EMPIRES_SOURCES ${MAPPERS_SHATTER_EMPIRES_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/ShatterEmpiresMapper/ShatterEmpiresMapper.cpp")
set(MAPPERS_TITLE_TAG_MAPPER_SOURCES ${MAPPERS_TITLE_TAG_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/TitleTagMapper/TitleTagMapper.cpp")
set(MAPPERS_TITLE_TAG_MAPPER_SOURCES ${MAPPERS_TITLE_TAG_MAPPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/TitleTagMapper/TitleTagMapping.cpp")
set(MAPPERS_TRAIT_SCRAPER_SOURCES ${MAPPERS_TRAIT_SCRAPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/TraitScraper/TraitScraper.cpp")
set(MAPPERS_TRAIT_SCRAPER_SOURCES ${MAPPERS_TRAIT_SCRAPER_SOURCES} "${PROJECT_SOURCE_DIR}/Mappers/TraitScraper/TraitScraping.cpp")

set(COMMON_SOURCES "../commonItems/CommonFunctions.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Color.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Date.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/GameVersion.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/LinuxUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Log.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/OSCommonLayer.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Parser.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/ParserHelpers.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/StringUtils.cpp")

add_executable(CK3toEU4 
	${MAIN_SOURCES}
	
	${CONFIGURATION_SOURCES}
	
	${CK3WORLD_SOURCES}
	${CK3WORLD_CHARACTERS_SOURCES}
	${CK3WORLD_COATSOFARMS_SOURCES}
	${CK3WORLD_CULTURES_SOURCES}
	${CK3WORLD_DYNASTIES_SOURCES}
	${CK3WORLD_FLAGS_SOURCES}
	${CK3WORLD_GEOGRAPHY_SOURCES}
	${CK3WORLD_MODS_SOURCES}
	${CK3WORLD_RELIGIONS_SOURCES}
	${CK3WORLD_TITLES_SOURCES}
	
	${EU4WORLD_SOURCES}
	${EU4WORLD_COUNTRY_SOURCES}
	${EU4WORLD_DIPLOMACY_SOURCES}
	${EU4WORLD_FLAG_FOUNDRY_SOURCES}
	${EU4WORLD_PROVINCE_SOURCES}
	${EU4WORLD_OUTPUT_SOURCES}
	${EU4WORLD_RELIGION_SOURCES}
	
	${MAPPERS_CONVERTER_VERSION_SOURCES}
	${MAPPERS_CULTURE_MAPPER_SOURCES}
	${MAPPERS_DEV_WEIGHTS_MAPPER_SOURCES}
	${MAPPERS_GOVERNMENTS_MAPPER_SOURCES}
	${MAPPERS_IAMHRE_SOURCES}
	${MAPPERS_LOCALIZATION_MAPPER_SOURCES}
	${MAPPERS_NAMED_COLORS_SOURCES}
	${MAPPERS_PRIMARY_TAG_MAPPER_SOURCES}
	${MAPPERS_PROVINCE_MAPPER_SOURCES}
	${MAPPERS_REGION_MAPPER_SOURCES}
	${MAPPERS_RELIGION_DEFINITION_MAPPER_SOURCES}
	${MAPPERS_RELIGION_GROUP_SCRAPER_SOURCES}
	${MAPPERS_RELIGION_MAPPER_SOURCES}
	${MAPPERS_RULER_PERSONALITIES_MAPPER_SOURCES}
	${MAPPERS_SHATTER_EMPIRES_SOURCES}
	${MAPPERS_TITLE_TAG_MAPPER_SOURCES}
	${MAPPERS_TRAIT_SCRAPER_SOURCES}
	
	${COMMON_SOURCES}
)

target_link_libraries(CK3toEU4 LINK_PUBLIC rakaly ZIPLIB stdc++fs
MagickWand-7.Q8
MagickCore-7.Q8
Magick++-7.Q8)

add_custom_command(TARGET CK3toEU4 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND chmod u+x Copy_Files.sh)
add_custom_command(TARGET CK3toEU4 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND ./Copy_Files.sh)
